# oh-emulator-manager

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  INSTALL_GNU_NOW.md  PROJECT_CHECKLIST.md  QUICK_START.md  README.md  SUCCESS_GNU_SETUP.md  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
_docs/: ANDROID_WINDOWS_FIX.md  CONSOLE_TABS_FEATURE.md  FIX_CONSOLE_HEADER_ALIGNMENT.md  FIX_MACOS_SIDEBAR_MARGIN.md  FIX_SCREENSHOT_OPEN.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICK_MINGW_SETUP.md  QUICK_TEST_GUIDE.md  RESIZE_CONSOLE_FEATURE.md  SCREENSHOT_CONSOLE_FEATURE.md  SETTINGS_PERSISTENCE_IMPLEMENTATION.md  TROUBLESHOOTING.md  USE_GNU_TOOLCHAIN.md  fix-windows-build.md  项目说明.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: android.rs  harmony.rs  ios.rs  mod.rs  settings.rs  usb_device.rs  usb_mobile.c
src-tauri/src/db/: mod.rs
src/components/: AppLogPanel.vue  DeviceLogPanel.vue  EmulatorCard.vue  EmulatorList.vue  RealDeviceCard.vue  RealDeviceList.vue
src/i18n/: en-US.json  zh-CN.json
src/router/: index.ts
src/stores/: emulator.ts  settings.ts
src/utils/: validation.ts
src/views/: HomeView.css  HomeView.vue  SettingsView.vue
