[package]
name = "SimHub"
version = "0.1.0"
description = "跨平台模拟器管理工具"
authors = ["OH Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
notify = "6"
chrono = "0.4"
dirs = "5"
lazy_static = "1.4"
arboard = { version = "3.4", features = ["image-data"] }
image = "0.25"
encoding_rs = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
